--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 # QuickConvertTool Dependencies
 
+# HTTP library for API requests
+requests>=2.31.0
+
 # Testing framework
 pytest>=7.4.0
 pytest-cov>=4.1.0
